--- a/analytics/pca.ipynb
+++ b/analytics/pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(path, skiprows=1, header=None,usecols=[1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.000e+00, -0.000e+00,  2.100e-01,  4.700e-01,  3.900e-01,\n",
+       "        1.740e+00, -2.100e-01,  2.800e+00, -1.100e+00,  3.410e+00,\n",
+       "       -1.350e+00,  3.700e+00, -7.900e-01,  4.360e+00,  3.200e-01,\n",
+       "        4.810e+00,  1.550e+00,  4.650e+00,  2.700e+00,  4.210e+00,\n",
+       "        3.850e+00,  3.820e+00,  4.990e+00,  3.370e+00,  6.130e+00,\n",
+       "        2.960e+00,  7.290e+00,  2.600e+00,  8.480e+00,  2.210e+00,\n",
+       "        9.620e+00,  1.750e+00,  1.077e+01,  1.280e+00,  1.195e+01,\n",
+       "        9.200e-01,  1.309e+01,  4.300e-01,  1.427e+01,  1.300e-01,\n",
+       "        1.547e+01, -1.900e-01,  1.661e+01, -6.500e-01,  1.775e+01,\n",
+       "       -1.050e+00,  1.888e+01, -1.380e+00,  2.002e+01, -1.740e+00,\n",
+       "        2.115e+01, -2.110e+00,  2.227e+01, -2.490e+00,  2.341e+01,\n",
+       "       -2.810e+00,  2.442e+01, -3.120e+00,  2.449e+01, -2.790e+00,\n",
+       "        2.367e+01, -2.170e+00,  2.254e+01, -2.050e+00,  2.137e+01,\n",
+       "       -1.950e+00,  2.016e+01, -1.750e+00,  1.898e+01, -1.430e+00,\n",
+       "        1.779e+01, -1.100e+00,  1.661e+01, -7.500e-01,  1.539e+01,\n",
+       "       -4.400e-01,  1.420e+01, -9.000e-02,  1.301e+01,  1.900e-01,\n",
+       "        1.181e+01,  4.200e-01,  1.058e+01,  7.200e-01,  9.390e+00,\n",
+       "        1.040e+00,  8.100e+00,  1.350e+00,  6.890e+00,  1.630e+00,\n",
+       "        5.740e+00,  1.940e+00,  4.530e+00,  2.300e+00,  3.300e+00,\n",
+       "        2.650e+00,  2.110e+00,  2.930e+00,  9.300e-01,  3.270e+00,\n",
+       "       -2.600e-01,  3.490e+00, -9.500e-01,  2.960e+00, -1.510e+00,\n",
+       "        2.060e+00, -1.100e+00,  1.670e+00, -2.000e-02,  1.450e+00,\n",
+       "        3.000e-01,  3.400e-01,  3.300e-01, -6.800e-01,  2.000e-01,\n",
+       "       -1.270e+00, -2.300e-01, -2.060e+00, -3.500e-01, -2.930e+00,\n",
+       "       -4.300e-01, -2.720e+00, -1.800e-01, -1.920e+00, -1.200e-01,\n",
+       "       -1.520e+00,  4.000e-01, -4.500e-01,  6.900e-01, -2.700e-01,\n",
+       "        5.400e-01, -9.700e-01,  7.400e-01, -9.800e-01,  3.100e-01,\n",
+       "       -1.010e+00,  3.800e-01, -3.500e-01,  3.600e-01,  7.400e-01,\n",
+       "       -1.500e-01,  1.570e+00, -1.220e+00,  1.830e+00, -2.090e+00,\n",
+       "        1.330e+00, -2.410e+00,  3.700e-01, -2.750e+00, -5.700e-01,\n",
+       "       -2.920e+00, -1.560e+00, -2.900e+00, -2.510e+00, -2.880e+00,\n",
+       "       -2.250e+00, -2.840e+00, -1.260e+00, -2.570e+00, -2.100e-01,\n",
+       "       -2.270e+00,  7.800e-01, -1.660e+00,  1.670e+00, -5.700e-01,\n",
+       "        1.810e+00,  2.700e-01,  1.090e+00,  3.700e-01,  3.000e-02,\n",
+       "        3.900e-01, -8.900e-01,  3.300e-01, -8.100e-01,  3.200e-01,\n",
+       "        3.700e-01, -1.000e-01,  1.440e+00, -1.060e+00,  1.980e+00,\n",
+       "       -1.560e+00,  2.400e+00, -7.500e-01,  3.210e+00,  2.500e-01,\n",
+       "        3.810e+00,  1.010e+00,  4.520e+00,  1.420e+00,  5.600e+00,\n",
+       "        2.160e+00,  6.510e+00,  3.230e+00,  6.830e+00,  4.000e+00,\n",
+       "        7.310e+00,  3.660e+00,  8.110e+00,  2.620e+00,  8.230e+00,\n",
+       "        1.550e+00,  8.520e+00,  5.200e-01,  8.860e+00, -5.400e-01,\n",
+       "        9.170e+00, -1.460e+00,  9.110e+00, -1.600e+00,  8.110e+00,\n",
+       "       -1.790e+00,  7.040e+00, -2.100e+00,  5.960e+00, -2.130e+00,\n",
+       "        4.920e+00, -1.520e+00,  4.000e+00, -9.500e-01,  3.050e+00,\n",
+       "       -1.470e+00,  2.200e+00, -8.400e-01,  1.710e+00,  1.900e-01,\n",
+       "        1.220e+00,  4.300e-01,  8.000e-02,  3.800e-01, -9.400e-01,\n",
+       "        4.100e-01, -9.800e-01,  4.000e-01, -8.700e-01,  4.700e-01,\n",
+       "       -9.000e-02,  9.000e-02, -6.400e-01,  2.200e-01,  0.000e+00,\n",
+       "        4.800e-01,  1.030e+00,  1.100e-01,  1.800e+00,  1.000e-01,\n",
+       "        1.520e+00,  4.000e-01,  6.500e-01,  2.800e-01, -3.400e-01,\n",
+       "        3.200e-01, -9.700e-01,  1.000e-02, -1.680e+00, -1.100e-01,\n",
+       "       -1.550e+00,  2.300e-01, -9.400e-01,  5.800e-01, -2.200e-01,\n",
+       "        6.500e-01, -1.500e-01,  4.400e-01, -7.900e-01, -5.000e-02,\n",
+       "       -1.420e+00, -1.200e-01, -1.370e+00,  3.700e-01, -7.000e-01,\n",
+       "        8.500e-01, -1.600e-01,  7.300e-01, -2.600e-01,  3.700e-01,\n",
+       "       -1.070e+00,  6.000e-01, -1.180e+00, -8.000e-02, -1.510e+00,\n",
+       "       -1.200e-01, -2.300e+00, -2.900e-01, -2.230e+00, -8.000e-02,\n",
+       "       -1.320e+00,  3.800e-01, -4.500e-01,  8.900e-01,  9.000e-02,\n",
+       "        7.100e-01, -6.200e-01,  3.900e-01, -7.000e-01,  6.400e-01,\n",
+       "       -7.500e-01,  1.400e-01, -1.240e+00, -1.700e-01, -2.030e+00,\n",
+       "       -1.100e-01, -2.790e+00, -3.600e-01, -2.550e+00, -2.400e-01,\n",
+       "       -1.580e+00,  3.500e-01, -7.600e-01,  5.700e-01, -4.600e-01,\n",
+       "        6.400e-01, -6.100e-01,  5.600e-01, -8.400e-01,  4.500e-01,\n",
+       "       -6.200e-01,  6.200e-01,  5.000e-01,  3.700e-01,  1.670e+00,\n",
+       "       -6.400e-01,  2.210e+00, -1.660e+00,  1.860e+00, -2.130e+00,\n",
+       "        8.900e-01, -2.620e+00, -1.000e-01, -2.790e+00, -1.180e+00,\n",
+       "       -2.840e+00, -2.210e+00, -3.080e+00, -1.370e+00, -2.860e+00,\n",
+       "       -3.500e-01, -2.310e+00,  5.900e-01, -1.890e+00,  1.590e+00,\n",
+       "       -1.120e+00,  2.330e+00, -3.000e-02,  2.100e+00,  6.500e-01,\n",
+       "        1.260e+00,  5.400e-01,  1.900e-01,  5.900e-01, -7.400e-01,\n",
+       "        2.700e-01, -5.600e-01,  2.900e-01, -6.600e-01,  2.600e-01,\n",
+       "       -1.200e-01,  7.800e-01,  8.000e-02,  6.100e-01,  1.400e-01,\n",
+       "        6.200e-01,  2.000e-01,  3.800e-01, -5.500e-01, -1.300e-01,\n",
+       "       -9.900e-01,  2.900e-01, -2.600e-01,  5.500e-01,  7.600e-01,\n",
+       "        4.200e-01,  1.700e+00, -8.000e-02,  2.460e+00,  9.000e-02,\n",
+       "        2.450e+00,  3.400e-01,  1.330e+00,  3.700e-01,  5.000e-02,\n",
+       "        5.900e-01, -8.400e-01,  2.700e-01, -4.700e-01,  5.200e-01,\n",
+       "        2.700e-01,  5.500e-01,  1.300e+00,  2.000e-01,  2.240e+00,\n",
+       "       -6.200e-01,  2.570e+00, -1.480e+00,  2.250e+00, -1.380e+00,\n",
+       "        2.260e+00, -4.900e-01,  2.150e+00,  3.900e-01,  1.750e+00,\n",
+       "        5.000e-01,  7.400e-01,  3.600e-01, -1.900e-01,  2.000e-02,\n",
+       "       -9.800e-01, -3.800e-01, -1.670e+00, -1.700e-01, -1.040e+00,\n",
+       "        2.100e-01, -3.700e-01,  3.200e-01,  6.000e-02,  3.600e-01,\n",
+       "        8.700e-01,  7.000e-02,  1.740e+00, -7.900e-01,  2.180e+00,\n",
+       "       -1.560e+00,  1.860e+00, -2.050e+00,  1.140e+00, -2.470e+00,\n",
+       "        1.900e-01, -2.710e+00, -7.000e-01, -2.610e+00, -1.760e+00,\n",
+       "       -2.780e+00, -1.940e+00, -2.690e+00, -1.080e+00, -2.670e+00,\n",
+       "       -1.000e-01, -2.340e+00,  8.800e-01, -1.920e+00,  1.860e+00,\n",
+       "       -1.320e+00,  2.710e+00, -3.900e-01,  2.850e+00,  5.000e-01,\n",
+       "        2.510e+00,  6.700e-01,  1.500e+00,  6.200e-01,  5.700e-01,\n",
+       "        5.300e-01, -3.300e-01,  3.700e-01, -3.600e-01,  4.900e-01,\n",
+       "        2.200e-01,  6.500e-01,  1.070e+00,  5.900e-01,  2.050e+00,\n",
+       "       -1.100e-01,  2.550e+00, -1.100e+00,  2.400e+00, -1.790e+00,\n",
+       "        1.760e+00, -2.180e+00,  7.900e-01, -2.620e+00, -1.700e-01,\n",
+       "       -2.900e+00, -1.170e+00, -2.570e+00, -1.940e+00, -2.560e+00,\n",
+       "       -1.690e+00, -2.660e+00, -6.200e-01, -2.350e+00,  5.400e-01,\n",
+       "       -1.970e+00,  1.610e+00, -1.360e+00,  2.540e+00, -2.900e-01,\n",
+       "        2.660e+00,  5.400e-01,  2.080e+00,  5.800e-01,  1.120e+00,\n",
+       "        6.200e-01,  1.700e-01,  4.300e-01, -7.500e-01,  1.900e-01,\n",
+       "       -1.590e+00,  3.000e-02, -1.430e+00,  3.700e-01, -6.800e-01,\n",
+       "        5.200e-01, -9.000e-02,  7.100e-01, -2.400e-01,  4.700e-01,\n",
+       "       -7.000e-01,  1.700e-01, -1.300e+00,  8.000e-02, -1.220e+00,\n",
+       "        4.500e-01, -6.200e-01,  6.200e-01, -2.000e-02,  6.900e-01,\n",
+       "        9.300e-01,  4.800e-01,  1.850e+00, -4.600e-01,  2.230e+00,\n",
+       "       -1.240e+00,  2.200e+00, -1.660e+00,  1.450e+00, -2.090e+00,\n",
+       "        5.200e-01, -2.380e+00, -3.900e-01, -2.440e+00, -1.370e+00,\n",
+       "       -2.300e+00, -1.990e+00, -2.370e+00, -1.820e+00, -2.530e+00,\n",
+       "       -8.000e-01, -2.190e+00,  1.600e-01, -1.960e+00,  1.060e+00,\n",
+       "       -1.830e+00,  2.080e+00, -1.290e+00,  2.850e+00, -2.800e-01,\n",
+       "        2.740e+00,  5.400e-01,  2.210e+00,  7.300e-01,  1.270e+00,\n",
+       "        7.800e-01,  3.100e-01,  5.200e-01, -5.900e-01,  2.500e-01,\n",
+       "       -1.490e+00,  2.900e-01, -2.210e+00,  1.800e-01, -1.970e+00,\n",
+       "        2.800e-01, -1.110e+00,  6.900e-01, -2.400e-01,  7.700e-01,\n",
+       "        7.000e-01,  8.500e-01,  1.790e+00,  9.300e-01,  1.840e+00,\n",
+       "        7.600e-01,  8.600e-01,  8.100e-01, -1.000e-01,  9.200e-01,\n",
+       "       -3.700e-01,  1.020e+00, -3.900e-01,  3.900e-01, -9.300e-01,\n",
+       "        3.300e-01, -1.730e+00,  2.500e-01, -1.600e+00,  2.700e-01,\n",
+       "       -8.300e-01,  6.400e-01, -1.300e-01,  8.200e-01,  5.700e-01,\n",
+       "        8.200e-01,  1.510e+00,  6.900e-01,  2.460e+00,  7.500e-01,\n",
+       "        2.610e+00,  8.100e-01,  1.760e+00,  7.500e-01,  6.600e-01,\n",
+       "        9.500e-01, -1.300e-01,  8.900e-01,  1.000e-02,  8.200e-01,\n",
+       "        8.600e-01,  8.400e-01,  1.870e+00,  8.400e-01,  2.790e+00,\n",
+       "        5.000e-02,  3.080e+00, -9.500e-01,  3.070e+00, -1.650e+00,\n",
+       "        2.670e+00, -1.690e+00,  1.700e+00, -2.060e+00,  7.400e-01,\n",
+       "       -2.320e+00, -1.500e-01, -2.450e+00, -1.130e+00, -2.500e+00,\n",
+       "       -1.020e+00, -2.290e+00, -7.000e-02, -2.070e+00,  9.600e-01,\n",
+       "       -2.010e+00,  2.040e+00, -1.590e+00,  2.990e+00, -5.800e-01,\n",
+       "        3.080e+00,  3.800e-01,  2.810e+00,  7.900e-01,  2.000e+00,\n",
+       "        8.800e-01,  1.050e+00,  9.100e-01,  2.000e-01,  4.400e-01,\n",
+       "       -7.300e-01,  3.500e-01, -1.380e+00,  5.200e-01, -2.130e+00,\n",
+       "        3.000e-01, -2.070e+00,  3.300e-01, -1.050e+00,  7.900e-01,\n",
+       "       -3.000e-02,  9.900e-01,  8.200e-01,  9.600e-01,  1.930e+00,\n",
+       "        5.400e-01,  2.850e+00, -3.300e-01,  3.280e+00, -1.210e+00,\n",
+       "        3.300e+00, -6.900e-01,  4.150e+00,  1.000e-01,  4.880e+00,\n",
+       "        9.100e-01,  5.620e+00,  1.330e+00,  6.620e+00,  1.200e+00,\n",
+       "        7.530e+00,  1.900e-01,  7.680e+00, -8.900e-01,  7.780e+00,\n",
+       "       -1.840e+00,  7.600e+00, -2.120e+00,  6.630e+00, -2.060e+00,\n",
+       "        5.630e+00, -1.450e+00,  4.800e+00, -6.800e-01,  4.150e+00,\n",
+       "       -1.050e+00,  3.260e+00, -1.480e+00,  2.840e+00, -7.300e-01,\n",
+       "        2.580e+00,  4.400e-01,  2.330e+00,  9.400e-01,  1.260e+00,\n",
+       "        1.020e+00,  2.400e-01,  1.070e+00, -2.200e-01,  1.230e+00,\n",
+       "       -2.000e-01,  1.240e+00, -2.600e-01,  1.220e+00, -1.150e+00,\n",
+       "        1.450e+00, -1.190e+00,  1.170e+00, -9.500e-01,  1.220e+00,\n",
+       "       -9.000e-02,  1.320e+00,  2.500e-01,  1.420e+00,  9.300e-01,\n",
+       "        1.320e+00,  2.140e+00,  5.700e-01,  2.880e+00, -6.300e-01,\n",
+       "        3.130e+00, -1.390e+00,  2.210e+00, -1.670e+00,  1.010e+00,\n",
+       "       -2.010e+00, -1.300e-01, -2.300e+00, -1.300e+00, -1.890e+00,\n",
+       "       -1.950e+00, -1.880e+00, -8.200e-01, -1.840e+00,  2.600e-01,\n",
+       "       -1.430e+00,  1.330e+00, -1.110e+00,  2.450e+00, -3.700e-01,\n",
+       "        3.080e+00,  7.100e-01,  2.940e+00,  1.140e+00,  2.130e+00,\n",
+       "        1.060e+00,  1.080e+00,  9.200e-01,  6.000e-02,  7.100e-01,\n",
+       "       -8.800e-01,  4.300e-01, -1.880e+00,  3.500e-01, -2.600e+00,\n",
+       "        5.500e-01, -1.640e+00,  8.500e-01, -6.500e-01,  1.390e+00,\n",
+       "        3.800e-01,  1.370e+00,  1.600e+00,  7.000e-01,  2.690e+00,\n",
+       "       -2.600e-01,  3.350e+00,  0.000e+00,  3.450e+00,  1.040e+00,\n",
+       "        4.060e+00,  2.200e+00,  4.130e+00,  3.360e+00,  3.840e+00,\n",
+       "        4.500e+00,  3.490e+00,  5.480e+00,  3.080e+00,  6.570e+00,\n",
+       "        2.690e+00,  7.600e+00,  2.190e+00,  8.660e+00,  1.820e+00,\n",
+       "        9.380e+00,  1.250e+00,  8.990e+00,  1.000e-01,  8.530e+00,\n",
+       "       -1.000e+00,  8.110e+00, -2.110e+00,  7.600e+00, -3.200e+00,\n",
+       "        7.200e+00, -4.330e+00,  7.100e+00, -4.120e+00,  7.530e+00,\n",
+       "       -2.930e+00,  8.150e+00, -1.850e+00,  8.590e+00, -6.000e-01,\n",
+       "        8.910e+00,  6.400e-01,  8.490e+00,  1.850e+00,  7.340e+00,\n",
+       "        2.480e+00])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(df).ravel()"
    ]
   },
   {
